--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -51,6 +51,8 @@ body {
 }
 
 .order {
+  display: flex;
+  flex-direction: column;
   margin-top: 80px;
   box-sizing: border-box;
   height: 668px;
@@ -60,6 +62,10 @@ body {
   font-family: "Space Grotesk";
   padding: 32px 32px 32px 32px;
   color: #FFFFFF;
+  margin-bottom: 128px;
+}
+.order:last-child {
+  justify-content: flex-end;
 }
 .order hr {
   margin: 32px 0 32px 0;
@@ -126,4 +132,28 @@ body {
 }
 .order__includes_main li:before {
   background-color: #162E3C;
+}
+.order_footer {
+  height: 100%;
+  align-items: flex-end;
+  display: flex;
+  justify-content: center;
+}
+.order__button {
+  font-family: "Space Grotesk";
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #DDF0A7;
+  border-radius: 64px;
+  background-color: #DDF0A7;
+  color: #162E3C;
+  width: 341px;
+  height: 52px;
+}
+.order__button_main {
+  border: 2px solid #162E3C;
+  background-color: #162E3C;
+  color: #FFFFFF;
 }/*# sourceMappingURL=style.css.map */
