Изменяет название классов

--- a/mustache/order-list.mustache
+++ b/mustache/order-list.mustache
@@ -10,7 +10,7 @@
             <hr class="{{{line_class}}}">
             <div class="{{{includes_class}}}">
                 <div class="order__includes-text">Includes:</div>
-                <ul class="order__includes-marker-list">
+                <ul class="order__includes-marker-list includes-list">
                 {{#includes}}
                     <li class="{{{li_class}}}">{{.}}</li>
                 {{/includes}}
