--- a/public_html/css/style.sass
+++ b/public_html/css/style.sass
@@ -106,7 +106,7 @@ body
     margin:0
     padding: 0
 
-.order__includes-marker-list-item
+.includes-list-item
     vertical-align: middle
     line-height: 24px 
     margin-bottom: 16px 
